refactor: refactor codebase to match new style
Signed-off-by: morazzer <morazzer@morazzer.dev>